--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,8 @@ cython_debug/
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
+data/
+
 # ruff
 .ruff_cache/
 
